--- a/style.css
+++ b/style.css
@@ -552,6 +552,8 @@ picture {
 
 .sobremim {
     width: 400px;
+    height: auto;
+    padding: 10px;
     
 }
 
@@ -659,7 +661,7 @@ picture {
 }
 
 .contato_inf i {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .contato_redes img {
@@ -668,7 +670,7 @@ picture {
 }
 
 .grupo_links ul a {
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 3px;
 }
 
@@ -821,6 +823,52 @@ main {
     font-size: 1.5rem;
     padding: 10px;
 }
+
+}
+
+@media screen and (min-width: 993px) and (max-width: 1024px) {
+
+    main {
+        max-width: 900px;
+        
+    }
+
+    .sobremim {
+        width: 900px;
+        
+    }
+
+    .sobremim h1 {
+        padding: 30px 0px 0px 30px;
+        font-size: 2rem;
+    }
+    
+    .sobremim h2 {
+        padding: 30px 0px 0px 20px;
+        font-size: 1.5rem;
+    }
+    
+    
+    .sobremim p {
+        font-size: 1.1rem;
+        padding: 30px 0px 0px 20px;
+       
+    }
+
+    .itens {
+        width: 900px;
+    }
+
+    .img_icon {
+        left: 3rem;
+       
+      }
+
+      .container_img {
+        gap: 30px;
+    }
+
+
 
 /*.contato {
     width: 120px;
